public class Jet implements ChangePrinter{
    public void PrintPrinter(){
        System.out.println("Струйный принтер");
    }
}
