public class JetPrinter extends Printer{
    public JetPrinter(){
        view = "Струйный";
        change = new Jet();
    }
}
