public class Lazer implements ChangePrinter{
    public void PrintPrinter(){
        System.out.println("Лазерный принтер");
    }
}
