public class LazerPrinter extends Printer{
    public LazerPrinter(){
        view = "Лазерный";
        change = new Lazer();
    }
}
