public class Led implements ChangePrinter{
    public void PrintPrinter(){
        System.out.println("Светодиодный принтер");
    }
}
