public class Matrix implements ChangePrinter{
    public void PrintPrinter(){
        System.out.println("Матричный принтер");
    }
}
