public class MatrixPrinter extends Printer{
    public MatrixPrinter(){
        view = "Матричный";
        change = new Matrix();
    }
}
