public abstract class Printer {

    String view;
    ChangePrinter change;
    public void performPrint(){
        change.PrintPrinter();
    };

}
